Fix gc logging setup